src/app/weaklyPrices/weaklyPrices.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:ital@1&display=swap');

html {
    overflow-y: scroll;
}

body {
    font-family: 'Lato';

}

::-webkit-scrollbar {
    width: 0px;
}

/*
::-webkit-scrollbar-track {
    background: rgb(24, 23, 23);
}

::-webkit-scrollbar-thumb {
    background: darkgray;
    border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
    background: gray;
}
*/

.weaklyPrices-page {
    
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #ffe99a;
    color: #000080;
    height: 100%;
}

.page-title {
    display: flex;
    flex-direction: row;
    align-items: center;

    line-height: 150px;
    font-size: 150px;
    font-family: 'Playfair Display';

    margin-top: 50px;
}

.card-display {
    display: flex;
    flex-direction: column;
    align-items: center;
}

